landscape view --design fix

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             ></path>
           </svg>
         </div>
-        <div class="container grid grid-two-cols">
+        <div class="container hero-container flex">
           <div class="hero-img">
             <div class="laptop">
               <div class="display">
