--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script defer src="./js/script.js"></script>
     <script defer src="./js/ajax.js"></script>
 
-    <title>Advanced Accounting Software - MeghnaSoft</title>
+    <title>Advanced Accounting Software - MegSoft</title>
   </head>
   <body>
     <!--
@@ -101,7 +101,7 @@
             </div>
           </div>
           <div class="hero-text">
-            <h1 class="hero-text-heading">MeghnaSoft</h1>
+            <h1 class="hero-text-heading">MegSoft</h1>
             <hr class="separator" />
             <p class="hero-text-para">
               Streamline your accounting processes and take control of your
