--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script defer src="./js/script.js"></script>
     <script defer src="./js/ajax.js"></script>
 
-    <title>Advanced Accounting Software - MegSoft</title>
+    <title>Advanced Accounting Software - MeghnaSoft</title>
   </head>
   <body>
     <!--
